# pool-of-threads

./: .benchmarks.toml  .editorconfig  .gitignore  .tsan_suppressions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  benchmark-history.jsonl  justfile  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
benches/: overhead.rs  scalability.rs  throughput.rs  work_stealing.rs
scripts/: bench-history.py  bench-record.py  bench-regression.py  bench-regression.sh  noise-characterize.py  noise-characterize.sh  tsan.sh
src/: lib.rs  main.rs  pool.rs  task.rs
tests/: concurrent_submission.rs  leak.rs  loom_parking.rs  perturbation.rs  proptest.rs  soak.rs  starvation.rs  stress.rs  work_stealing.rs
