[package]
name = "pool-of-threads"
version = "0.1.0"
edition = "2024"
description = "A work-stealing thread pool scheduler written in Rust"
authors = ["Mykola"]
license = "MIT"
repository = "https://github.com/B1Z0N/pool-of-threads"
keywords = ["thread-pool", "scheduler", "work-stealing", "concurrency"]
categories = ["concurrency", "asynchronous"]

[dependencies]
crossbeam = { version = "0.8", features = ["crossbeam-deque"] }
# parking_lot = "0.12"
# once_cell = "1.20"
# tracing = "0.1"
# tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0

[[bench]]
name = "throughput"
harness = false
